移除 GetCurrentShell 方法并更新项目配置
在 `Program.cs` 中删除了 `GetCurrentShell` 方法的实现，因 NativeAOT 不支持 WMI，相关代码逻辑也被注释掉。
在 `WindowsSudo.csproj` 中移除了部分程序集属性，并添加了新的元数据属性以更新项目发布信息。
在 `Readme.md` 中添加了 WindowsSudo 的详细介绍，包括功能、安装方法和使用示例，提升了文档的完整性和可读性。

--- a/src/WindowsSudo/WindowsSudo.csproj
+++ b/src/WindowsSudo/WindowsSudo.csproj
@@ -7,13 +7,25 @@
     <Nullable>enable</Nullable>
     <AssemblyName>sudo</AssemblyName>
     <PublishAot>true</PublishAot>
-    <InvariantGlobalization>true</InvariantGlobalization>
-    <StripSymbols>true</StripSymbols>
-    <IlcGenerateCompleteTypeMetadata>true</IlcGenerateCompleteTypeMetadata>
+    <SignAssembly>False</SignAssembly>
+    <PackageId>ClassicByte.WindowsSudo</PackageId>
+    <Title>Sudo in Windows</Title>
+    <Authors>Higashitani Yume</Authors>
+    <Company>ClassicByte</Company>
+    <Product>WindowsSudo</Product>
+    <Copyright>Copyright (C) 2025 ClassicByte</Copyright>
+    <PackageProjectUrl>github.com/ClassicByteInc/WindowsSudo</PackageProjectUrl>
+    <PackageReadmeFile>Readme.md</PackageReadmeFile>
+    <RepositoryUrl>github.com/ClassicByteInc/WindowsSudo</RepositoryUrl>
+    <PackageTags>windows;sudo</PackageTags>
+    <PackAsTool>True</PackAsTool>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Management" Version="9.0.6" />
+    <None Include="..\..\Readme.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
